# beecork-terminal

./: .gitignore  README.md  RELEASING.md  index.html  package-lock.json  package.json
.claude/think-it-through/: beecrok-terminal.md  file-browser-navigation.md  roadmap-whats-next.md
.github/workflows/: release.yml
site/terminal/: index.html
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: fs.rs  git.rs  lib.rs  main.rs  pty.rs  sound.rs  watcher.rs
src/components/: ConfirmModal.tsx  ContextMenu.tsx  FileEditor.tsx  FileTree.tsx  FirstRunModal.tsx  MediaViewer.tsx  PaneHeader.tsx  PromptModal.tsx  RenameInput.tsx  SessionRail.tsx  SettingsModal.tsx  SidePanel.tsx  TerminalPane.tsx  UpdateBanner.tsx  ZoomControl.tsx  icons.tsx
src/lib/: api.ts  clipboard.ts  events.ts  keepFocus.ts  language.test.ts  language.ts  notify.ts  paths.test.ts  paths.ts  persist.ts  scroll.test.ts  scroll.ts  sessions.test.ts  sessions.ts  settings.tsx  sound.test.ts  sound.ts  useContextMenu.ts  useDrag.ts  useSessionStatus.ts
