[package]
name = "beecork-terminal"
version = "0.1.16"
description = "A desktop cockpit for CLI coding agents — terminal, live diff, and file browser."
authors = ["Beecork"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beecork_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
notify = "6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
sysinfo = "0.38.4"
trash = "5"
# Native sound: synthesized chimes played through the OS mixer, so they never
# suffer WKWebView's AudioContext suspend/zombie death. default-features off — we
# feed raw samples (SamplesBuffer), so none of the format decoders are needed.
rodio = { version = "0.20", default-features = false }

